<resources>
    <string name="app_name">ZHAM</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_button">Get Started</string>
    <string name="booking_description_img">Booking description</string>
    <string name="book_title_text">BOOK</string>
    <string name="book_sequence_text">Locate a Car around the city. see car availability on the map and book it through the App</string>
    <string name="welcome1_next_button_text">Next</string>
    <string name="welcome1_skip_button_text">Skip</string>
    <string name="welcome2_unlock_title_text">Unlock</string>
    <string name="welcome2_unlock_text">Use Qr code that sent to your mobile via the app,and unlock the car and and the billing start when the car is unlocked</string>
    <string name="welcome2_next_button">Next</string>
    <string name="welcome2_skip_button">Skip</string>
    <string name="welcome2_qr_image">welcome2 QR image</string>
    <string name="welcome3_ride_title">Ride</string>
    <string name="welcome3_ride_text">Enjoy your ride,And When your done,just park in any nearby garage and lock the car to stop the billing from app</string>
    <string name="welcome3_finish_button">Finish</string>
    <string name="welcome3_ride_image">welcome3 ride image</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_login_button">Log In</string>
    <string name="login_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_signup_button">Sign Up</string>
    <string name="signup_title">Creat Account</string>
    <string name="signup_first_name_text">First Name</string>
    <string name="signup_middle_name_text">Middle Name</string>
    <string name="signup_last_name_text">Last Name</string>
    <string name="signup_email_text">Email</string>
    <string name="signup_password_text">Password</string>
    <string name="signup_confirm_password_text">Confirm password</string>
    <string name="signup_phone_number_text">Phone Number</string>
    <string name="signup_birthdate_text">Birthdate</string>
    <string name="signup_gender_text">Gender</string>
    <string name="signup_card_number_text">Card Number</string>
    <string name="signup_signup_button_text">Sign up</string>
</resources>