<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/_2">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/signup_title"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/signup_title" />

                <TextView
                    android:id="@+id/signup_first_name_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_first_name_text" />

                <EditText
                    android:id="@+id/signup_first_name_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/signup_middle_name_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_middle_name_text" />

                <EditText
                    android:id="@+id/signup_middle_name_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/signup_last_name_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_last_name_text" />

                <EditText
                    android:id="@+id/signup_last_name_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/signup_email_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_email_text" />

                <EditText
                    android:id="@+id/signup_email_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:autoText="false"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/signup_password_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_password_text" />

                <EditText
                    android:id="@+id/signup_password_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/signup_confirm_password_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_confirm_password_text" />

                <EditText
                    android:id="@+id/signup_confirm_password_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPassword" />

                <TextView
                    android:id="@+id/signup_phone_number_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_phone_number_text" />

                <EditText
                    android:id="@+id/signup_phone_number_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/signup_birthdate_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_birthdate_text" />

                <EditText
                    android:id="@+id/signup_birthdate_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/signup_gender_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_gender_text" />

                <EditText
                    android:id="@+id/signup_gender_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/signup_card_number_text"
                    style="@style/s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/signup_card_number_text" />

                <EditText
                    android:id="@+id/signup_card_number_entry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/signup_signup_button"
                    style="@style/b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_signup_button_text"
                    app:backgroundTint="@android:color/secondary_text_light" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>