<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".welcome2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/_2">

        <ImageView
            android:id="@+id/welcome2_image"
            android:layout_width="169dp"
            android:layout_height="163dp"
            android:background="#4A4A4A"
            android:contentDescription="@string/welcome2_qr_image"
            android:hapticFeedbackEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.123"
            app:srcCompat="@drawable/scan_phone_qr_code_512_1" />

        <TextView
            android:id="@+id/welcome2_unlock_title_text"
            style="@style/s"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="380dp"
            android:text="@string/welcome2_unlock_title_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2_image"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/welcome2_unlock_text"
            style="@style/s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome2_unlock_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2_unlock_title_text"
            app:layout_constraintVertical_bias="0.183" />

        <SeekBar
            android:id="@+id/welcome2_seekbar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="197dp"
            android:layout_height="28dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:focusable="auto"
            android:isScrollContainer="false"
            android:keepScreenOn="false"
            android:layerType="none"
            android:max="3"
            android:progress="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2_unlock_text" />

        <Button
            android:id="@+id/welcome2_next_button"
            style="@style/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome2_next_button"
            app:backgroundTint="@android:color/secondary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2_seekbar" />

        <Button
            android:id="@+id/welcome2_skip_button"
            style="@style/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/welcome2_skip_button"
            app:backgroundTint="@android:color/secondary_text_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome2_seekbar" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>